Copyright 1998-2007 Gerald Combs <gerald@wireshark.org> and contributors.
This is free software; see the source for copying conditions. There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
Compiled with GTK+ 2.10.13, with GLib 2.12.12, with libpcap 0.9.5, with libz
1.2.3, with libpcre 6.6, with Net-SNMP 5.2.1.2, without ADNS, without Lua, with
GnuTLS 1.4.4, with Gcrypt 1.2.2, without Kerberos, without PortAudio, without
AirPcap.
Running on Linux 2.6.21-gentoo-r4, with libpcap version 0.9.5.
Built using gcc 4.1.2 (Gentoo 4.1.2).
Wireshark is Open Source Software released under the GNU General Public License.
Yes, in most (all?) cases this repeating information is not very useful. If I remember correctly,tThis typically happens when there are multiple PDUs in the same packet. Do you have a capture file you would be able to attach that exhibits the problem to help us solve it? Thanks!
If a single packet is enough you can use the LDAP packet from bug #1801 (which btw causes a segfault too). If it is not enough I would prefer to mail you the captured stream directly rather then publishing it to all.
The culprit is related to the protocol preference "Reassemble LDAP messages spanning multiple TCP segments".
Have a look at packet #57, switching the protocol option solves the issue with the statistic. Beside that the packet is no longer marked as malformed.
Change 14393 had a related patch set uploaded by Michael Mann:
Remove most (all?) of the tree view of Protocol Hierarchy Statistics and just list the protocols with their stats.