Walk up the tree view of Protocol Hierarchy Statistics to look for protocol matches.

Things like [Reassembled TCP segments] can add superfluous leaves so just walking down the tree from current location, so walk up the tree as well.

Bug: 1734
Change-Id: I91af554b59e1a6867dba9189ba37db5e396d892a
Reviewed-on: https://code.wireshark.org/review/14393
Petri-Dish: Michael Mann <mmann78@netscape.net>
Tested-by: Petri Dish Buildbot <buildbot-no-reply@wireshark.org>
Reviewed-by: Michael Mann <mmann78@netscape.net>
(cherry picked from commit 7f8b3025ef1cde5b80c1e47e14b66a56f2fb9a5e)
Reviewed-on: https://code.wireshark.org/review/14433